--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.7
   flutter_svg: ^2.2.1
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
