--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,22 @@ dependencies:
   flutter_native_splash: ^2.4.7
   flutter_svg: ^2.2.1
   firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  flutter_bloc: ^9.1.1
+  injectable: ^2.5.2
+  get_it: ^8.2.0
+  google_sign_in: ^5.4.4
+  equatable: ^2.0.7
+  flutter_facebook_auth: ^7.1.2
+  
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  
+  build_runner: ^2.10.1
+  injectable_generator: ^2.9.0
   
   
   
